--- a/index.html
+++ b/index.html
@@ -174,6 +174,182 @@
         fetch(url, {
             method: "POST",
             mode: "no-cors",
+            hea<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sistem Pengurusan Komputer & Pencetak</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        .page { display: none; padding: 20px; border: 1px solid #dee2e6; border-radius: 8px; margin-top: 20px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+        .page.active { display: block; }
+        .form-select, .form-control { margin-bottom: 15px; }
+        .btn-custom { margin-top: 10px; }
+        .container { max-width: 700px; }
+        .is-invalid { border-color: #dc3545 !important; }
+    </style>
+</head>
+
+<body class="bg-light">
+
+<div class="container py-4">
+
+    <div class="text-center mb-4">
+        <img src="Logo_KV.jpg" alt="Logo Kolej Vokasional Pasir Mas" class="img-fluid rounded shadow" style="max-height: 150px;">
+        <h1 class="text-black">PEMBANGUNAN SISTEM PENGURUSAN PENGGUNAAN KOMPUTER DAN PENCETAK</h1>
+    </div>
+
+    <!-- PAGE 1 -->
+    <div class="page active" id="page1">
+        <h2 class="text-secondary mb-3">1. Maklumat Pengguna</h2>
+
+        <label>Kediaman:<span class="text-danger">*</span></label>
+        <select id="kediaman" name="kediaman" class="form-select" required>
+            <option value="">--Pilih--</option>
+            <option value="Aspura">Aspura</option>
+            <option value="Aspuri">Aspuri</option>
+        </select>
+
+        <label>Nama Penuh:<span class="text-danger">*</span></label>
+        <input type="text" id="nama" name="nama" class="form-control" placeholder="Isi Nama Penuh" required>
+
+        <label>Tahun Pengajian:<span class="text-danger">*</span></label>
+        <select id="tahun" name="tahun" class="form-select" required>
+            <option value="">--Pilih--</option>
+            <option value="DVM">DVM</option>
+            <option value="SVM">SVM</option>
+        </select>
+
+        <label>Kelas:<span class="text-danger">*</span></label>
+        <select id="kelas" name="kelas" class="form-select" required>
+            <option value="">--Pilih--</option>
+            <option value="BPP">BPP</option>
+            <option value="BPR">BPR</option>
+            <option value="BKP1">BKP1</option>
+            <option value="BKP2">BKP2</option>
+            <option value="BPM">BPM</option>
+            <option value="KSK1">KSK1</option>
+            <option value="KSK2">KSK2</option>
+        </select>
+
+        <button onclick="validatePage1()" class="btn btn-primary w-100 btn-custom">Seterusnya ➡️</button>
+    </div>
+
+    <!-- PAGE 2 -->
+    <div class="page" id="page2">
+        <h2 class="text-secondary mb-3">2. Pilih Tujuan</h2>
+
+        <label>Tujuan Penggunaan:</label>
+        <select id="tujuan" name="tujuan" class="form-select">
+            <option value="">--Pilih Tujuan--</option>
+            <option value="Print">Print</option>
+            <option value="Penggunaan Komputer">Penggunaan Komputer</option>
+            <option value="Lain-lain">Lain-lain</option>
+        </select>
+
+        <input type="text" id="lainTujuan" name="lainTujuan" class="form-control" placeholder="Nyatakan tujuan lain" style="display:none;">
+
+        <div class="d-flex justify-content-between mt-4">
+            <button onclick="nextPage(1)" class="btn btn-secondary btn-custom">⬅️ Kembali</button>
+            <button onclick="prosesTujuan()" class="btn btn-primary btn-custom">Seterusnya ➡️</button>
+        </div>
+    </div>
+
+    <!-- PAGE 3 -->
+    <div class="page" id="page3">
+        <h2 class="text-secondary mb-3">3. Cara Pembayaran</h2>
+
+        <label>Pilih Cara Pembayaran:</label>
+        <select id="bayaran" name="bayaran" class="form-select" onchange="pilihBayaran()">
+            <option value="">--Pilih Cara Pembayaran--</option>
+            <option value="Tunai">Tunai</option>
+            <option value="QR">Imbas Kod QR</option>
+        </select>
+
+        <div id="qrSection" class="text-center p-3 mt-3 border rounded bg-warning-subtle" style="display:none;">
+            <h3>Imbas QR</h3>
+            <img src="qr.jpg" alt="QR Bank" class="img-fluid mt-2" style="max-height: 200px;">
+            <p class="text-danger">Sila pastikan pembayaran selesai sebelum menghantar.</p>
+        </div>
+
+        <div class="d-flex justify-content-between mt-4">
+            <button onclick="nextPage(2)" class="btn btn-secondary">⬅️ Kembali</button>
+
+            <!-- BUTTON HANTAR DATA -->
+            <button onclick="hantarData()" class="btn btn-success">Hantar Maklumat ✅</button>
+        </div>
+    </div>
+
+    <!-- PAGE 4 -->
+    <div class="page text-center" id="page4">
+        <h2 class="text-success mb-4">🎉 Berjaya!</h2>
+        <p class="lead">Maklumat anda telah dihantar.</p>
+        <button onclick="resetForm()" class="btn btn-info btn-lg mt-3">Isi Semula</button>
+    </div>
+</div>
+
+<script>
+    // Validation Page 1
+    function validatePage1() {
+        const req = ['kediaman','nama','tahun','kelas'];
+        let ok = true;
+
+        req.forEach(id=>{
+            const el=document.getElementById(id);
+            el.classList.remove('is-invalid');
+            if(el.value===""){ el.classList.add('is-invalid'); ok=false; }
+        });
+
+        if(ok) nextPage(2);
+        else alert("Sila lengkapkan semua maklumat.");
+    }
+
+    function nextPage(p){ 
+        document.querySelectorAll('.page').forEach(x=>x.classList.remove('active'));
+        document.getElementById('page'+p).classList.add('active');
+        window.scrollTo(0,0);
+    }
+
+    document.getElementById("tujuan").addEventListener("change", function(){
+        document.getElementById("lainTujuan").style.display = (this.value === "Lain-lain") ? "block" : "none";
+    });
+
+    function prosesTujuan(){
+        const t = document.getElementById("tujuan").value;
+        if(t==="") alert("Sila pilih tujuan.");
+        else if(t==="Print") nextPage(3);
+        else nextPage(4);
+    }
+
+    function pilihBayaran(){
+        document.getElementById("qrSection").style.display =
+            document.getElementById("bayaran").value==="QR" ? "block" : "none";
+    }
+
+    function resetForm(){ location.reload(); }
+
+    // ========================================
+    // 🚀  HANTAR DATA KE GOOGLE SHEET
+    // ========================================
+    function hantarData() {
+
+        const url = "https://script.google.com/macros/s/AKfycbxIJTlOxzry7ipNnlx2ZnX2oFZe7xCBv-jYjT04NPAxVeqk7zRgt43O1qh6WNP4cGML/exec";
+
+        const data = {
+            kediaman: document.getElementById("kediaman").value,
+            nama: document.getElementById("nama").value,
+            tahun: document.getElementById("tahun").value,
+            kelas: document.getElementById("kelas").value,
+            tujuan: document.getElementById("tujuan").value,
+            lainTujuan: document.getElementById("lainTujuan").value,
+            bayaran: document.getElementById("bayaran").value
+        };
+
+        fetch(url, {
+            method: "POST",
+            mode: "no-cors",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(data)
         });
@@ -184,3 +360,14 @@
 
 </body>
 </html>
+ders: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
+        });
+
+        nextPage(4);
+    }
+</script>
+
+</body>
+</html>
+
